cmake_minimum_required(VERSION 3.12)
project(FTorch_CESM_WRAPPER LANGUAGES Fortran)
if("${USE_FTORCH}" STREQUAL "ON")
  message("Building FTorch library and wrapper ${USE_FTORCH} ${CMAKE_BINARY_DIR}")
  add_subdirectory(src)
  add_library(ftorch_wrapper SHARED ${CMAKE_SOURCE_DIR}/FTorch_cesm_interface.F90)
  target_link_libraries(ftorch_wrapper PRIVATE ftorch)
else()
  message("Building FTorch wrapper only ${USE_FTORCH}")
  add_library(ftorch_wrapper SHARED  ${CMAKE_SOURCE_DIR}/FTorch_cesm_interface.F90)
endif()
